RESOLVED FIXED156874
JSC virtual call thunk shouldn't do a structure->classInfo lookup
https://bugs.webkit.org/show_bug.cgi?id=156874
Summary JSC virtual call thunk shouldn't do a structure->classInfo lookup
Filip Pizlo
Reported 2016-04-21 15:32:06 PDT
Patch forthcoming.
Attachments
the patch (1.74 KB, patch)
2016-04-21 15:33 PDT, Filip Pizlo
keith_miller: review+
Filip Pizlo
Comment 1 2016-04-21 15:33:25 PDT
Created attachment 276970 [details] the patch
Keith Miller
Comment 2 2016-04-21 15:34:21 PDT
Comment on attachment 276970 [details] the patch r=me.
Filip Pizlo
Comment 3 2016-04-21 18:25:49 PDT
Filip Pizlo
Comment 4 2016-04-21 18:26:19 PDT
Landed already.
Note You need to log in before you can comment on or make changes to this bug.